<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/launch_view_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <!-- Add image for home screen logo. -->
        <ImageView
            android:id="@+id/ballot_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ballot_logo"
            android:contentDescription="@string/ballot_img_content_description"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!--  Add Button to navigate to upcoming elections. -->
        <Button
            android:id="@+id/upcoming_elections_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/upcoming_elections_button_text"
            app:layout_constraintTop_toBottomOf="@id/ballot_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

        <!--  Add Button to navigate to representatives. -->

        <Button
            android:id="@+id/find_representatives_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_my_representatives_button"
            app:layout_constraintTop_toBottomOf="@id/upcoming_elections_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>